# paper_collection

./: .gitattributes  .gitignore  A BGP Hijacking Detection Method based on Multi-dimensional Historical Data Analysis, Man Zeng, Heyang Li, Junyu Lai, Xiaohong Huang.md  A Binary Feedback Scheme for Congestion Avoidance in Computer Networks, Kadangode K. Ramakrishnan, Raj Jain.md  A Blueprint for Improving the Robustness of Internet Routing, Georgos Siganos, Michalis Faloutsos.md  A Comparative Analysis of BGP Anomaly Detection and Robustness Algorithms, Kotikapaludi Sriram, Oliver Borchert, Okhee Kim, Patrick Gleichmann, Doug Montgomery.md  A Comparative Study on IP Prefixes and their Origin ASes in BGP and the IRR, Akmal Khan, Hyun-chul Kim, Ted “Taekyoung” Kwon, Yanghee Choi.md  A First Look at Deep Learning Apps on Smartphones.md  A General Framework for Robust Interactive Learning, Ehsan Emamjomeh-Zadeh, David Kempe.md  A Systematic Framework for Unearthing the Missing Links- Measurements and Impact, Yihua He, Georgos Siganos, Michalis Faloutsos, Srikanth Krishnamurthy.md  A symbolic execution framework for javascript, Prateek Saxena, Devdatta Akhawe, Steve Hanna, Feng Mao, Stephen McCamant, Dawn Song.md  AS Relationships Inference from the Internet Routing Registries, Akmal Khan, Hyun-chul Kim, Ted Kwon.md  AS Relationships, Customer Cones, and Validation, Matthew Luckie, Bradley Huffaker, Amogh Dhamdhere, Vasileios Giotsas, and KC Claffy.md  An Evaluation of The Ninth SOSP Submissions or How (and How Not) to Write A Good Systems Paper, Roy Levin, David D. Redell.md  An empirical study of privacy-violating information flows in JavaScript web applications, Dongseok Jang, Ranjit Jhala, Sorin Lerner, Hovav Shacham.md  (+74 more)
(+50 files in other folders)
