[project]
name = "paper_collection"
version = "0.0.0"
description = "Add your description here"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" },
]
dependencies = [
    "nougat-ocr @ git+https://github.com/SichangHe/facebookresearch--nougat.git",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paper_collection"]
